* remove css .table td {overflow:hidden;} and fix bug.

--- a/module/project/css/common.css
+++ b/module/project/css/common.css
@@ -13,7 +13,6 @@
 .table-children {border-left: 2px solid #cbd0db; border-right: 2px solid #cbd0db;}
 .table-children.table-child-top {border-top: 2px solid #cbd0db;}
 .table-children.table-child-bottom {border-bottom: 2px solid #cbd0db;}
-.table td {overflow:hidden;}
 .table td.has-child > .task-toggle {color: #838a9d; position: relative; top: -1px;}
 .table td.has-child > .task-toggle:hover {color: #006af1; cursor: pointer;}
 .table td.has-child > .task-toggle > .icon {font-size: 16px; display: inline-block; transition: transform .2s;}
